2000-11-03  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2read.c (new_symbol): Relocate address of symbol by the
	base address of the section it is in rather than always using
	the base address of the .text section.

2000-11-01  J.T. Conklin  <jtc@redback.com>

	* TODO: Note abstraction layer violation where "ocd reset" command
	must invalidate the dcache, and how this might be fixed.

	* monitor.c (#include "dcache.h"): Removed.
	(remote_dcache): Removed.
	(monitor_open): Removed code that created local dcache.
	(flush_monitor_dcache): Removed (unused function).
	(monitor_resume): Removed call to dcache_invd().
	(monitor_load): Likewise.
	(monitor_xfer_memory): Changed to call monitor_write_memory(),
	monitor_write_memory_block(), and monitor_read_memory() instead
	of dcache_xfer_memory().
	* monitor.h (flush_monitor_dcache): Removed (unused function).
	* ocd.c (#include "dcache.h"): Removed.
	(ocd_dcache): Removed.
	(ocd_open): Removed code that created local dcache.
	(ocd_resume): Removed call to dcache_invd().
	(ocd_xfer_memory): Changed to call ocd_write_bytes() and 
	ocd_read_bytes() instead of dcache_xfer_memory().
	(bdm_reset_command): Invalidate target dcache.
	* remote-bug.c (bug_load): Remove call to dcache_invd().
	(bug_resume): Likewise.
	(bug_settings): Remove dcache, readfunc, and writefunc fields
	from initializer.
	(bug_xfer_memory): Changed to call bug_read_memory() and 
	bug_write_memory() instead of dcache_xfer_memory().
	* remote-nindy.c (#include "dcache.h"): Removed.
	(nindy_dcache): Removed.
	(nindy_open): Removed code that created local dcache.
	(nindy_resume): Removed call to dcache_invd().
	(nindy_load): Likewise.
	(nindy_xfer_inferior_memory): Changed to call ninMemPut() and 
	ninMemGet() instead of dcache_xfer_memory().
	* remote-sds.c (#include "dcache.h"): Removed.
	(sds_dcache): Removed.
	(sds_open): Removed code that created local dcache.
	(sds_resume): Removed call to dcache_invd().